--- a/app/Resources/views/components/foot.html.twig
+++ b/app/Resources/views/components/foot.html.twig
@@ -2,6 +2,6 @@
  # Content that comes after the body content.
  #}
 
+{% include 'components/modal.html.twig' %}
 {% include 'components/scripts.html.twig' %}
 
-{% block javascripts %}{% endblock %}
