--- a/app/Resources/views/components/stylesheets.html.twig
+++ b/app/Resources/views/components/stylesheets.html.twig
@@ -3,6 +3,7 @@
     'assets/vendor/bootstrap/dist/css/bootstrap-theme.min.css'
     'assets/vendor/jquery-ui/themes/base/jquery-ui.min.css'
     'assets/vendor/chosen/chosen.min.css'
+    'assets/vendor/font-awesome/css/font-awesome.min.css'
     filter='cssrewrite'
     output='assets/compiled/css/libraries.css'
     
