--- a/src/ATS/Bundle/MovieBundle/Resources/views/Movie/get.html.twig
+++ b/src/ATS/Bundle/MovieBundle/Resources/views/Movie/get.html.twig
@@ -26,7 +26,7 @@
                 <div class="col-sm-7">{{ movie.getRuntime() }}</div>
             </div>
             
-            <div class="row">
+            {#<div class="row">
                 <div class="col-sm-5">Reviews:</div>
                 <div class="col-sm-7">{{ movie.reviews|length }}</div>
             </div>
@@ -34,12 +34,12 @@
             <div class="row">
                 <div class="col-sm-5">Avg Rating:</div>
                 <div class="col-sm-7">{{ movie.avgRating|round(2) }}</div>
-            </div>
+            </div>#}
             
-            <div class="row">
+            {#<div class="row">
                 <div class="col-sm-5"></div>
                 <div class="col-sm-7"></div>
-            </div>
+            </div>#}
             
         </div>
     </div>
