Added inline editing of the movies.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,6 +9,8 @@
         {% embed 'top-nav.html.twig' %}
         {% endembed %}
         
+        {% include 'components/modal.html.twig' %}
+        
         <div class="container-fluid body-wrapper">
             {% block body %}{% endblock %}
         </div>
