--- a/src/ATS/Bundle/MovieBundle/Resources/views/Movie/components/rating.html.twig
+++ b/src/ATS/Bundle/MovieBundle/Resources/views/Movie/components/rating.html.twig
@@ -3,7 +3,7 @@
 
 <div class="rating">
     {% for i in 5..1 %}
-        <input id="{{ id }}rating-{{ i }}" type="radio" name="rating" value="{{ i }}"{% if movie is defined and movie.rating == i %} checked{% endif %}{% if not is_owner %} disabled{% endif %}>
+        <input id="{{ id }}rating-{{ i }}" type="radio" name="rating" value="{{ i }}"{% if movie is defined and movie.rating == i %} checked{% endif %}{% if not is_owner %} disabled{% endif %} required>
         <label for="{{ id }}rating-{{ i }}">{{ i }} star</label>
     {% endfor %}
 </div>
