--- a/src/ATS/Bundle/MovieBundle/Resources/views/Movie/create.html.twig
+++ b/src/ATS/Bundle/MovieBundle/Resources/views/Movie/create.html.twig
@@ -6,7 +6,7 @@
         </label>
 
         <div class="col-md-9">
-            <input id="title" type="text" name="title" class="form-control" placeholder="Title..." minlength="1" maxlength="50" />
+            <input id="title" type="text" name="title" class="form-control" placeholder="Title..." pattern=".{1,50}" required />
         </div>
     </div>
     
@@ -33,7 +33,7 @@
         </label>
 
         <div class="col-md-9">
-            <input id="length" type="number" name="length" class="form-control" placeholder="Duration in minutes..." min="1" max="499" />
+            <input id="length" type="number" name="length" class="form-control" placeholder="Duration in minutes..." min="1" max="499" required />
         </div>
     </div>
     
