--- a/src/ATS/Bundle/MovieBundle/Resources/public/less/global.less
+++ b/src/ATS/Bundle/MovieBundle/Resources/public/less/global.less
@@ -57,6 +57,12 @@
         label {
           font-size: 100%;
         }
+        
+        .rating-overlay {
+          position: absolute;
+          width:    100%;
+          height:   100%;
+        }
       }
     }
   }
