--- a/src/ATS/Bundle/MovieBundle/Resources/views/Movie/components/crud.html.twig
+++ b/src/ATS/Bundle/MovieBundle/Resources/views/Movie/components/crud.html.twig
@@ -1,19 +1,19 @@
 <div class="row crud-row">
-    <div class="col-sm-4">
+    <div class="col-xs-4">
         <a href="#" class="edit btn btn-sm btn-default">
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
             Edit
         </a>
     </div>
     
-    <div class="col-sm-5">
+    <div class="col-xs-5">
         <button type="submit" class="submit btn btn-sm btn-primary">
             <i class="fa fa-paper-plane" aria-hidden="true"></i>
             Submit
         </button>
     </div>
     
-    <div class="col-sm-3">
+    <div class="col-xs-3">
         <a href="#" class="delete btn btn-sm btn-danger">
             <i class="fa fa-trash-o" aria-hidden="true"></i>
         </a>
