--- a/src/ATS/Bundle/MovieBundle/Resources/public/less/global.less
+++ b/src/ATS/Bundle/MovieBundle/Resources/public/less/global.less
@@ -25,17 +25,22 @@
 }
 
 .body-wrapper {
-  width: 85%;
   
   .available-movies {
     margin-top: 2em;
     
     .movie-tile {
+      height: 335px;
+      border: 2px solid grey;
+      padding: 1em;
+      margin: 0.5em;
+      
       .other-owner {
         height: 30px;
         line-height: 25px;
         border-radius: 25px;
         background: #CCC;
+        margin: 0 0.25em;
         
         span {
           font-weight: bold;
@@ -47,12 +52,13 @@
       }
       
       img {
-        width: 100px;
-        height: 100px;
+        width: 75px;
+        height: 75px;
       }
       
       .rating {
-        float: none;
+        float:   none;
+        display: inline-block;
         
         label {
           font-size: 100%;
