--- a/src/ATS/Bundle/MovieBundle/Resources/views/Movie/components/crud.html.twig
+++ b/src/ATS/Bundle/MovieBundle/Resources/views/Movie/components/crud.html.twig
@@ -6,16 +6,17 @@
         </a>
     </div>
     
-    <div class="col-xs-5">
+    <div class="col-xs-4">
         <button type="submit" class="submit btn btn-sm btn-primary">
             <i class="fa fa-paper-plane" aria-hidden="true"></i>
             Submit
         </button>
     </div>
     
-    <div class="col-xs-3">
+    <div class="col-xs-4">
         <a href="#" class="delete btn btn-sm btn-danger">
             <i class="fa fa-trash-o" aria-hidden="true"></i>
+            Delete
         </a>
     </div>
 </div>
