--- a/src/ATS/Bundle/MovieBundle/Resources/views/Movie/get.html.twig
+++ b/src/ATS/Bundle/MovieBundle/Resources/views/Movie/get.html.twig
@@ -1,6 +1,6 @@
 {% for movie in movies %}
-    <div id="frm-movie-tile-{{ movie.id }}" class="col-xs-4 movie-tile text-center" data-id="{{ movie.id }}">
-        <form action="{{ path('post_movie_edit', {'id': movie.id}) }}" method="post">
+    <div class="col-xs-12 col-sm-3 col-md-2 movie-tile text-center" data-id="{{ movie.id }}">
+        <form id="frm-movie-tile-{{ movie.id }}" action="{{ path('post_movie_edit', {'id': movie.id}) }}" method="post">
             {% if app.user and app.user.id == movie.owner.id %}
                 {% embed '@ATSMovie/Movie/components/crud.html.twig' %}
                 {% endembed %}
@@ -14,7 +14,7 @@
             
             <div class="row">
                 <div class="col-xs-12">
-                    <span>{{ movie.title }}</span>
+                    <h4><span>{{ movie.title }}</span></h4>
                     <input name="title" type="text" class="hidden form-control" value="{{ movie.title }}" pattern=".{1,50}" required>
                 </div>
             </div>
@@ -62,13 +62,11 @@
                 
                 <div class="row">
                     <div class="col-xs-5">Rating:</div>
-                    <div class="col-xs-offset-1 col-xs-5">
+                    <div class="col-xs-7">
                         {#<input name="rating" type="text" class="hidden form-control" value="{{ movie.getRating() }}">#}
                         {% embed '@ATSMovie/Movie/components/rating.html.twig' %}
                         {% endembed %}
                     </div>
-                    
-                    <div class="col-xs-offset-1"></div>
                 </div>
                 
             </div>
