Chosen now activates on mobile. UI updates. Added sorting.

--- a/app/Resources/views/components/scripts.html.twig
+++ b/app/Resources/views/components/scripts.html.twig
@@ -2,7 +2,8 @@
     'assets/vendor/jquery/dist/jquery.min.js'
     'assets/vendor/jquery-ui/jquery-ui.min.js'
     'assets/vendor/bootstrap/dist/js/bootstrap.min.js'
-    'assets/vendor/chosen/chosen.jquery.min.js'
+    'assets/vendor/chosen/chosen.jquery.js'
+    filter='cssrewrite,lessphp'
     output='assets/compiled/scripts/libraries.js'
 %}
     <script src="{{ asset_url }}"></script>
