--- a/src/ATS/Bundle/MovieBundle/Resources/views/Movie/create.html.twig
+++ b/src/ATS/Bundle/MovieBundle/Resources/views/Movie/create.html.twig
@@ -1,70 +1,80 @@
 <form id="frm-create" method="post" action="{{ path('post_movie_create') }}" class="container-fluid">
-    <div class="row">
-        <label for="title" class="col-md-3 control-label">
-            <span class="fa fa-info-circle" data-toggle="tooltip" data-original-title="Required"></span>
-            Title:
-        </label>
-
-        <div class="col-md-9">
-            <input id="title" type="text" name="title" class="form-control" placeholder="Title..." pattern=".{1,50}" required />
+    <div>
+        <div class="row">
+            <label for="title" class="col-xs-3 control-label">
+                <span class="fa fa-info-circle" data-toggle="tooltip" data-original-title="Required"></span>
+                Title:
+            </label>
+    
+            <div class="col-xs-9">
+                <input id="title" type="text" name="title" class="form-control" placeholder="Title..." pattern=".{1,50}" required />
+            </div>
         </div>
     </div>
     
-    <div class="row">
-        <label for="format" class="col-md-3 control-label">
-            <span class="fa fa-info-circle" data-toggle="tooltip" data-original-title="Required"></span>
-            Format:
-        </label>
-
-        <div class="col-md-9">
-            <select id="format" class="chosen-select form-control" name="format" data-placeholder="Format..." required>
-                <option></option>
-                <option value="Streaming">Streaming</option>
-                <option value="DVD">DVD</option>
-                <option value="VHS">VHS</option>
-            </select>
+    <div>
+        <div class="row">
+            <label for="format" class="col-xs-3 control-label">
+                <span class="fa fa-info-circle" data-toggle="tooltip" data-original-title="Required"></span>
+                Format:
+            </label>
+    
+            <div class="col-xs-9">
+                <select id="format" class="chosen-select form-control" name="format" data-placeholder="Format..." required>
+                    <option></option>
+                    <option value="Streaming">Streaming</option>
+                    <option value="DVD">DVD</option>
+                    <option value="VHS">VHS</option>
+                </select>
+            </div>
         </div>
     </div>
     
-    <div class="row">
-        <label for="length" class="col-md-3 control-label">
-            <span class="fa fa-info-circle" data-toggle="tooltip" data-original-title="Required. In minutes."></span>
-            Run-time:
-        </label>
-
-        <div class="col-md-9">
-            <input id="length" type="number" name="length" class="form-control" placeholder="Duration in minutes..." min="1" max="499" required />
+    <div>
+        <div class="row">
+            <label for="length" class="col-xs-3 control-label">
+                <span class="fa fa-info-circle" data-toggle="tooltip" data-original-title="Required. In minutes."></span>
+                Run-time:
+            </label>
+    
+            <div class="col-xs-9">
+                <input id="length" type="number" name="length" class="form-control" placeholder="Duration in minutes..." min="1" max="499" required />
+            </div>
         </div>
     </div>
     
-    <div class="row">
-        <label for="year" class="col-md-3 control-label">
-            <span class="fa fa-info-circle" data-toggle="tooltip" data-original-title="Required"></span>
-            Year:
-        </label>
-
-        <div class="col-md-9">
-            <select id="year" class="chosen-select form-control" name="year" data-placeholder="Year..." required>
-                <option></option>
-                
-                {% for i in 1801..2099 %}
-                    <option value="{{ i }}">{{ i }}</option>
-                {% endfor %}
-            </select>
+    <div>
+        <div class="row">
+            <label for="year" class="col-xs-3 control-label">
+                <span class="fa fa-info-circle" data-toggle="tooltip" data-original-title="Required"></span>
+                Year:
+            </label>
+    
+            <div class="col-xs-9">
+                <select id="year" class="chosen-select form-control" name="year" data-placeholder="Year..." required>
+                    <option></option>
+                    
+                    {% for i in 1801..2099 %}
+                        <option value="{{ i }}">{{ i }}</option>
+                    {% endfor %}
+                </select>
+            </div>
         </div>
     </div>
     
-    <div class="row">
-        <label for="rating" class="col-md-3 control-label">
-            <span class="fa fa-info-circle" data-toggle="tooltip" data-original-title="Required"></span>
-            Rating:
-        </label>
-
-        <div class="col-md-9">
-            {% embed '@ATSMovie/Movie/components/rating.html.twig' with {
-                'create_flow' : true
-            } %}
-            {% endembed %}
+    <div>
+        <div class="row">
+            <label for="rating" class="col-xs-3 control-label">
+                <span class="fa fa-info-circle" data-toggle="tooltip" data-original-title="Required"></span>
+                Rating:
+            </label>
+    
+            <div class="col-xs-9">
+                {% embed '@ATSMovie/Movie/components/rating.html.twig' with {
+                    'create_flow' : true
+                } %}
+                {% endembed %}
+            </div>
         </div>
     </div>
 
@@ -72,3 +82,7 @@
         <button class="btn btn-primary" type="submit">Submit</button>
     </div>
 </form>
+
+<script>
+    $('[data-toggle="tooltip"]').tooltip();
+</script>
