--- a/app/Resources/views/top-nav.html.twig
+++ b/app/Resources/views/top-nav.html.twig
@@ -1,22 +1,14 @@
 <div class="container-fluid top-nav">
-    <div class="row text-center nav-items">
-        <div class="col-xs-3 username-wrapper">
+    <div class="row nav-items text-center">
+        <div class="col-xs-4 username-wrapper">
             {% if app.user %}Welcome {{ app.user.username }}!{% endif %}
         </div>
         
-        <div class="col-xs-2 nav-actions">
-            {% if app.user %}
-                <a id="btn-movie-create" class="btn btn-xs btn-default" href="{{ path('get_movie_create', {
-                    '_format' : 'html'
-                }) }}"><i class="fa fa-plus" aria-hidden="true"></i> Add</a>
-            {% endif %}
-        </div>
-        
-        <div class="col-xs-5 text-left">
+        <div class="col-xs-5">
             <h4>Austin's Movie Manager</h4>
         </div>
         
-        <div class="col-xs-2 login-container">
+        <div class="col-xs-3 login-container">
             {% if app.user %}
                 <a href="{{ logout_path('main') }}" class="btn btn-sm btn-secondary">Logout</a>
             {% else %}
