--- a/src/ATS/Bundle/MovieBundle/Resources/public/less/global.less
+++ b/src/ATS/Bundle/MovieBundle/Resources/public/less/global.less
@@ -26,29 +26,37 @@
 
 .body-wrapper {
   
+  .search-choice-close {
+    margin-top: 3em;
+  }
+  
   .available-movies {
     margin-top: 2em;
     
     .movie-tile {
-      height: 335px;
+      min-height: 350px;
       border: 2px solid grey;
       padding: 1em;
       margin: 0.5em;
       
       .other-owner {
-        height: 30px;
-        line-height: 25px;
-        border-radius: 25px;
-        background: #CCC;
+        min-height: 32.5px;
+        line-height: 30px;
+        border-radius: 30px;
         margin: 0 0.25em;
+        border: 1px solid black;
         
-        span {
+        span.owner-username {
           font-weight: bold;
         }
       }
       
       .crud-row {
         margin-bottom: 0.25em;
+        
+        a, button {
+          padding: 0 1em;
+        }
       }
       
       img {
