--- a/src/ATS/Bundle/MovieBundle/Resources/views/Movie/components/crud.html.twig
+++ b/src/ATS/Bundle/MovieBundle/Resources/views/Movie/components/crud.html.twig
@@ -1,22 +1,32 @@
-<div class="row crud-row">
-    <div class="col-xs-4">
-        <a href="#" class="edit btn btn-sm btn-default">
+<div class="crud-row">
+    <div class="btn-group btn-group-sm hidden-sm">
+        <a href="#" class="edit" title="Edit">
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
             Edit
         </a>
-    </div>
-    
-    <div class="col-xs-4">
-        <button type="submit" class="submit btn btn-sm btn-primary">
+        
+        <button type="submit" class="btn-link submit" title="Submit changes" disabled>
             <i class="fa fa-paper-plane" aria-hidden="true"></i>
             Submit
         </button>
-    </div>
-    
-    <div class="col-xs-4">
-        <a href="#" class="delete btn btn-sm btn-danger">
+        
+        <a href="{{ path('delete_movie', {'id' : movie.id}) }}" class="delete" title="Delete movie">
             <i class="fa fa-trash-o" aria-hidden="true"></i>
             Delete
+        </a>
+    </div>
+    
+    <div class="btn-group btn-group-lg visible-sm">
+        <a href="#" class="edit" title="Edit">
+            <i class="fa fa-pencil-square-o fa-2x fa-" aria-hidden="true"></i>
+        </a>
+        
+        <button type="submit" class="btn-link submit" title="Submit changes" disabled>
+            <i class="fa fa-paper-plane fa-2x" aria-hidden="true"></i>
+        </button>
+        
+        <a href="{{ path('delete_movie', {'id' : movie.id}) }}" class="delete" title="Delete movie">
+            <i class="fa fa-trash-o fa-2x" aria-hidden="true"></i>
         </a>
     </div>
 </div>
