--- a/src/ATS/Bundle/MovieBundle/Resources/views/Security/login.html.twig
+++ b/src/ATS/Bundle/MovieBundle/Resources/views/Security/login.html.twig
@@ -1,4 +1,5 @@
 {#{% extends '::base.html.twig' %}#}
+{% extends '::base-light.html.twig' %}
 
 {% block body %}
 
@@ -23,7 +24,8 @@
             {#
                 If you want to control the URL the user
                 is redirected to on success (more details below)#}
-                {#<input type="hidden" name="_target_path" value="{{ path('homepage') }}" />#}
+                {#<input type="hidden" name="_target_path" value="{{ path('homepage') }}" />
+            #}
             
             <div class="actions">
                 <button id="btn-action-signup" type="button" class="btn btn-default">signup</button>
