--- a/app/Resources/views/components/scripts.html.twig
+++ b/app/Resources/views/components/scripts.html.twig
@@ -3,7 +3,7 @@
     'assets/vendor/jquery-ui/jquery-ui.min.js'
     'assets/vendor/bootstrap/dist/js/bootstrap.min.js'
     'assets/vendor/chosen/chosen.jquery.js'
-    filter='cssrewrite,lessphp'
+    filter='?jsqueeze'
     output='assets/compiled/scripts/libraries.js'
 %}
     <script src="{{ asset_url }}"></script>
