Removed an unnecessary wrapper around the movie tiles.

--- a/src/ATS/Bundle/MovieBundle/Resources/views/Default/index.html.twig
+++ b/src/ATS/Bundle/MovieBundle/Resources/views/Default/index.html.twig
@@ -16,12 +16,10 @@
     {% embed '@ATSMovie/Default/components/search.html.twig' %}
     {% endembed %}
     
-    <div class="available-movies">
-        <div class="row">
-            {{ render(controller('ATSMovieBundle:Movie:get', {
-                '_format' : 'html'
-            })) }}
-        </div>
+    <div class="available-movies row">
+        {{ render(controller('ATSMovieBundle:Movie:get', {
+            '_format' : 'html'
+        })) }}
     </div>
 
     {% embed '@ATSMovie/Default/components/login.html.twig' %}
